--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>One-column fixed-width responsive layout</title>
+<title>Alex Rushing - Website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Description" lang="en" content="ADD SITE DESCRIPTION">
 <meta name="author" content="ADD AUTHOR INFORMATION">
@@ -33,68 +33,15 @@
             <h1>Alex Rushing</h1>
             <hr>
 
-            <!-- Heading levels -->
-            <h1>Summary</h1>
-            <h2>Heading level 2</h2>
-            <h3>Heading level 3</h3>
-            <h4>Heading level 4</h4>
-            <h5>Heading level 5</h5>
-            <h6>Heading level 6</h6>
-            <hr>
-
-            <!-- Paragraphs -->
-            <h3>Paragraphs</h3>
-            <p>Ut wisi enim ad minim veniam, <a href="#">quis nostrud exerci tation ullamcorper</a> suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-            <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-            <hr>
-
             <!-- Responsive images -->
-            <h3>Responsive images</h3>
-            <p>For images to be responsive (so that they will rescale to suit the width of the parent, use the <code>.img-responsive</code> class.</p>
+            <h3>Mt. Zugspitze</h3>
+            <p>Just me taking a selfie on the tallest mountain in Germany, the peak of the Zugspitze is 2962m above sea level.</p>
             <p><img class="img-responsive" src="{{ url_for('static', filename='alex.jpg') }}" alt=""></p>
-
-            <!-- Lists -->
-            <h3>Unordered list</h3>
-            <p>Unordered lists are used to markup lists where list items do not require numbering.</p>
-            <ul>
-                <li>Ut wisi enim ad minim veniam</li>
-                <li>Quis nostrud exerci tation</li>
-                <li>Lamcorper suscipit lobortis nis</li>
-                <li>Ut aliquip ex ea commodo consequat</li>
-                <li>Duis autem vel eum iriure dolor</li>
-            </ul>
-            <hr>
-
-            <h3>Ordered list</h3>
-            <p>Ordered lists are used to markup lists where list items require numbering.</p>
-            <ol>
-                <li>Hendrerit in vulputate velit esse</li>
-                <li>Olestie consequat</li>
-                <li>Vel illum dolore eu feugiat</li>
-                <li>Nulla facilisis at vero eros</li>
-                <li>Accumsan et iusto odio</li>
-            </ol>
-            <hr>
-
-            <h3>Unstyled list</h3>
-            <p>You can make the list unstyled using the <code>list-unstyled</code> class.</p>
-            <ul class="list-unstyled">
-                <li>Ut wisi enim ad minim veniam</li>
-                <li>Quis nostrud exerci tation</li>
-                <li>Lamcorper suscipit lobortis nis</li>
-                <li>Ut aliquip ex ea commodo consequat</li>
-                <li>Duis autem vel eum iriure dolor</li>
-            </ul>
-            <hr>
-
-            <h3>Inline list</h3>
-            <p>You can make the list display inline using the <code>list-inline</code> class.</p>
-            <ul class="list-inline">
-                <li>One</li>
-                <li>Two</li>
-                <li>Three</li>
-                <li>Four</li>
-            </ul>
+            
+            <!-- Paragraphs -->
+            <h3>First Post</h3>
+            <p>I've decided to make my own personal web page and here it is.</p>
+            <p>This website was made using Python 2.7 and Flask, a web framework for Python, and I used some simple css and html layouts from maxdesign because I'm lazy.</p>
             <hr>
 
             <!-- Blockquotes -->
@@ -107,40 +54,36 @@
             <hr>
 
             <h3>Buttons</h3>
-            <p>You can apply the <code>btn</code> class to any element that requires a button style.</p>
-            <p><a href="#" class="btn">Submit</a></p>
+            <p>Checkout this random page.</p>
+            <p><a href="/fariha" class="btn">Submit</a></p>
             <hr>
 
             <!-- Tables -->
-            <h3>Tables</h3>
-            <p>Tables should be given the class of <code>table</code>.</p>
+            <h3>Goals</h3>
+            <p>Just some tempory summer goals</p>
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
+                        <th>Goals</th>
+                        <th>Completed</th>
                     </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>Make a personal webpage</td>
+                    <td>&#9989</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
+                    <td>Complete learn C the hard way</td>
+                    <td>  </td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
+                    <td>Pack and prepare for going to Singapore</td>
+                    <td>  </td>
                 </tr>
                 </tbody>
             </table>
@@ -148,7 +91,7 @@
         </div>
     </div>
     <div class="footer">
-        &copy; Copyright 2015
+        Published 2015
     </div>
 </div>
 </body>
