--- a/static/style.css
+++ b/static/style.css
@@ -160,7 +160,7 @@ a:active { color: red; }
 .btn
 {
     color: #fff !important;
-    background-color: royalblue;
+    background-color: maroon;
     border-color: #222;
     display: inline-block;
     padding: .5em 1em;
