Updated about page and added victor

--- a/templates/my_index.html
+++ b/templates/my_index.html
@@ -23,8 +23,9 @@
     </div>
     <div class="nav-bar">
         <ul class="nav">
+            <li><a href="#">Home</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="projects">Projects</a></li>
         </ul>
     </div>
     <div class="content">
@@ -54,8 +55,10 @@
             <hr>
 
             <h3>Buttons</h3>
-            <p>Checkout this random page.</p>
+            <p>Checkout these random pages.</p>
             <p><a href="/fariha" class="btn">Submit</a></p>
+
+            <p><a href="/victor" class="btn">Victor</a></p>
             <hr>
 
             <!-- Tables -->
