--- a/templates/victor.html
+++ b/templates/victor.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1 class="header-heading">About</h1>
+        <h1 class="header-heading">Victor</h1>
     </div>
     <div class="nav-bar">
         <ul class="nav">
@@ -31,11 +31,11 @@
     <div class="content">
         <div class="main">
 
-            <h1>Who am I?</h1>
+            <h1>The Partner in Crime</h1>
             <hr>
 
-            <p>My name is Alex and I like computers and travelling.</p>
-            <p><img class="img-responsive" src="{{ url_for('static', filename='alex1.jpg') }}" alt=""></p>
+            <p>His name is Victor and he enjoys long walks on the beach and looking hella sexy.</p>
+            <p><img class="img-responsive" src="{{ url_for('static', filename='vdawg.jpeg') }}" alt=""></p>
 
         </div>
     </div>
