Add brancusi quote

--- a/templates/my_index.html
+++ b/templates/my_index.html
@@ -46,11 +46,11 @@
             <hr>
 
             <!-- Blockquotes -->
-            <h3>Blockquotes</h3>
-            <p>The blockquote element is used to markup long quotations. Ideally, content inside should be wrapped in paragraph elements.</p>
+            <h3>A Favorite of Mine</h3>
+            <p>Constantin Brancusi was a Romanian sculptor who died in the mid '50's, when I first read about him and read about his mentality on work ethic I became enamored with it.</p>
             <blockquote>
-                <p>The real names of our people were destroyed during slavery. The last name of my forefathers was taken from them when they were brought to America and made slaves, and then the name of the slave master was given, which we refuse, we reject that name today and refuse it. I never acknowledge it whatsoever.</p>
-                <footer><a href="http://en.wikipedia.org/wiki/Malcolm_X">Malcolm X</a></footer>
+                <p>"Create like a God, Command like a King, and Work like a Slave."</p>
+                <footer><a href="http://en.wikipedia.org/wiki/Constantin_Brâncuși">Constantin Brancusi</a></footer>
             </blockquote>
             <hr>
 
