--- a/templates/my_index.html
+++ b/templates/my_index.html
@@ -1,4 +1,4 @@
-<CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 
 <!-- Override CSS file - add your own CSS rules -->
-<link rel="stylesheet" type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="container">
@@ -42,7 +42,10 @@
             <!-- Paragraphs -->
             <h3>First Post</h3>
             <p>I've decided to make my own personal web page and here it is.</p>
-            <p>This website was made using Python 2.7 and Flask, a web framework for Python, and I used some simple css and html layouts from maxdesign because I'm lazy.</p>
+            <p>This website was made using Python 2.7 and
+            <a href="flask.pocoo.org/docs/0.10/">Flask</a>, a web framework
+            for Python, and I used some simple css and html layouts from
+            <a href="css.maxdesign.com.au">maxdesign</a> because I'm lazy.</p>
             <hr>
 
             <!-- Blockquotes -->
@@ -63,7 +66,7 @@
 
             <!-- Tables -->
             <h3>Goals</h3>
-            <p>Just some tempory summer goals</p>
+            <p>Just some temporary summer goals</p>
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -80,7 +83,7 @@
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Complete learn C the hard way</td>
+                    <td>Complete "learn C the hard way"</td>
                     <td>  </td>
                 </tr>
                 <tr>
