--- a/templates/boot.html
+++ b/templates/boot.html
@@ -66,8 +66,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Around the World</h1>
-        <p>A travel blog from a nerdy programmer.</p>
+        <h1>Welcome to the Site!</h1>
+        <p>-nerdy programmer.</p>
     </div>
 
     <!-- Responsive images -->
