Added more cool stuff

--- a/templates/cover.html
+++ b/templates/cover.html
@@ -34,7 +34,9 @@
 
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand">Cover</h3>
+                    <h3 class="masthead-brand">
+                    <img class="img-responsive" src="{{ url_for('static', filename='alexicon.jpg') }}" height="64" width="64">
+                    </h3>
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="home">Home</a></li>
@@ -55,7 +57,7 @@
 
             <div class="mastfoot">
                 <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a><p>
                 </div>
             </div>
 
