--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
     height: 100%;
-    background: url(alex.jpg) no-repeat center center fixed;
+    background: url(Atlanta.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
