--- a/templates/about.html
+++ b/templates/about.html
@@ -1,34 +1,4 @@
-<CTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Alex Rushing - Website</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Description" lang="en" content="ADD SITE DESCRIPTION">
-<meta name="author" content="ADD AUTHOR INFORMATION">
-<meta name="robots" content="index, follow">
-
-<!-- icons -->
-<link rel="apple-touch-icon" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
-<link rel="shortcut icon" href="favicon.ico">
-
-<!-- Override CSS file - add your own CSS rules -->
-<link rel="stylesheet" type=text/css href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
-<div class="container">
-    <div class="header">
-        <h1 class="header-heading">About</h1>
-    </div>
-    <div class="nav-bar">
-        <ul class="nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="projects">Projects</a></li>
-        </ul>
-    </div>
-    <div class="content">
+{% extends "base.html" %}
         <div class="main">
 
             <h1>Who am I?</h1>
@@ -38,11 +8,4 @@
             <p><img class="img-responsive" src="{{ url_for('static', filename='alex1.jpg') }}" alt=""></p>
 
         </div>
-    </div>
-    <div class="footer">
-        Published 2015
-    </div>
-</div>
-</body>
-</html>
 
