--- a/templates/cover.html
+++ b/templates/cover.html
@@ -1,71 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
 
-<title>Alex Rushing - Website</title>
+        <title>Alex Rushing - Website</title>
 
-<!-- Bootstrap core CSS -->
-<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="{{ url_for('static', filename='css/cover.css') }}" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="{{ url_for('static', filename='css/cover.css') }}" rel="stylesheet">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-                                                                        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                                                                              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                                                                                  <![endif]-->
-</head>
-
-<body>
-
-<div class="site-wrapper">
-
-    <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-            <div class="masthead clearfix">
-                <div class="inner">
-                    <h3 class="masthead-brand">
-                    <img class="img-responsive" src="{{ url_for('static', filename='alexicon.jpg') }}" height="64" width="64">
-                    </h3>
-                    <nav>
-                        <ul class="nav masthead-nav">
-                            <li class="active"><a href="home">Home</a></li>
-                            <li><a href="about">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </nav>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+                                                                                <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+                                                                                    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+                                                                                        <![endif]-->
+        </head>
+    <body>
+        <nav>
+            <ul class="nav nav-tabs nav-static pull-left">
+                <li><a href="home"><span class='glyphicon glyphicon-home'></span></a></li>
+                <li><a href="contact"><span class='glyphicon glyphicon-envelope'></span></a></li>
+                <li><a href="about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
+            </ul>
+            <ul class="nav nav-tabs nav-static pull-right">
+                <li><a href="contact"><span class='glyphicon glyphicon-fire'></span></a></li>
+            </ul>
+        </nav>
+        <div class="site-wrapper">
+            <div class="site-wrapper-inner">
+                <div class='cover-container'>
+                    <div class="mastfoot">
+                        <div class="inner">
+                            <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="inner cover">
-                <h1 class="cover-heading">Welcome to my page.</h1>
-                <p class="lead">
-                <a href="home" class="btn btn-lg btn-default">Continue</a>
-                </p>
-            </div>
-
-            <div class="mastfoot">
-                <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a><p>
-                </div>
-            </div>
-
         </div>
-
-    </div>
-
-</div>
-
-</body>
+    </body>
 </html>
 
