--- a/templates/cover.html
+++ b/templates/cover.html
@@ -22,25 +22,24 @@
                                                                                 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
                                                                                     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
                                                                                         <![endif]-->
-        </head>
+    </head>
     <body>
-        <nav>
-            <ul class="nav nav-tabs nav-static pull-left">
-                <li><a href="home"><span class='glyphicon glyphicon-home'></span></a></li>
-                <li><a href="contact"><span class='glyphicon glyphicon-envelope'></span></a></li>
-                <li><a href="about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
-            </ul>
-            <ul class="nav nav-tabs nav-static pull-right">
-                <li><a href="contact"><span class='glyphicon glyphicon-fire'></span></a></li>
-            </ul>
-        </nav>
         <div class="site-wrapper">
-            <div class="site-wrapper-inner">
-                <div class='cover-container'>
-                    <div class="mastfoot">
-                        <div class="inner">
-                            <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
-                        </div>
+            <nav>
+                <ul class="nav nav-tabs nav-static pull-left">
+                    <li><a href="home"><span class='glyphicon glyphicon-home'></span></a></li>
+                    <li><a href="resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
+                    <li><a href="contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
+                    <li><a href="about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
+                </ul>
+                <ul class="nav nav-tabs nav-static pull-right">
+                    <li><a href="aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
+                </ul>
+            </nav>
+            <div class='cover-container'>
+                <div class="mastfoot">
+                    <div class="inner">
+                        <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
                     </div>
                 </div>
             </div>
