Welcome to my world chagnes

--- a/templates/cover.html
+++ b/templates/cover.html
@@ -25,19 +25,17 @@
     </head>
     <body>
         <div class="site-wrapper">
+            <div class='cover-container'>
+                <div class="mastfoot">
             <nav>
-                <ul class="nav nav-tabs nav-static pull-left">
+                <ul class="nav nav-tabs nav-static">
                     <li><a href="home"><span class='glyphicon glyphicon-home'></span></a></li>
                     <li><a href="resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
+                    <li><a href="aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
                     <li><a href="contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
                     <li><a href="about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
                 </ul>
-                <ul class="nav nav-tabs nav-static pull-right">
-                    <li><a href="aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
-                </ul>
             </nav>
-            <div class='cover-container'>
-                <div class="mastfoot">
                     <div class="inner">
                         <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
                     </div>
