--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4023,6 +4023,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  float: right;
 }
 .nav > li {
   position: relative;
