--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-    color: #fff;
+    color: white;
 }
 
 /* Custom default button */
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
     height: 100%;
-    background: url(Atlanta.jpg) no-repeat center center fixed;
+    background: url(Earth4.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
