--- a/templates/cover.html
+++ b/templates/cover.html
@@ -29,11 +29,11 @@
                 <div class="mastfoot">
             <nav>
                 <ul class="nav nav-tabs nav-static">
-                    <li><a href="home"><span class='glyphicon glyphicon-home'></span></a></li>
-                    <li><a href="resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
-                    <li><a href="aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
-                    <li><a href="contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
-                    <li><a href="about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
+                    <li><a href="/"><span class='glyphicon glyphicon-home'></span></a></li>
+                    <li><a href="/resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
+                    <li><a href="/aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
+                    <li><a href="/contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
+                    <li><a href="/about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
                 </ul>
             </nav>
                     <div class="inner">
