Fixed some jinja stuff

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block body %}
         <div class="main">
 
             <h1>Who am I?</h1>
@@ -8,4 +9,4 @@
             <p><img class="img-responsive" src="{{ url_for('static', filename='alex1.jpg') }}" alt=""></p>
 
         </div>
-
+{% endblock %}
