--- a/templates/base.html
+++ b/templates/base.html
@@ -1,69 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
 
-<title>Alex Rushing - Website</title>
+        <title>Alex Rushing - Website</title>
 
-<!-- Bootstrap core CSS -->
-<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-<!-- Bootstrap theme -->
-<link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="{{ url_for('static', filename='theme.css') }}" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
                                                                                 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                                                                                      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                                                                                          <![endif]-->
-</head>
-
-<body role="document">
-
-<!-- Fixed navbar -->
-<nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Navigation:</a>
+                                                                                    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+                                                                                        <![endif]-->
+    </head>
+    <body>
+        <div class="site-wrapper">
+            <div class='cover-container'>
+                {% block body %}{% endblock %}
+                <div class="mastfoot">
+            <nav>
+                <ul class="nav nav-tabs nav-static">
+                    <li><a href="/"><span class='glyphicon glyphicon-home'></span></a></li>
+                    <li><a href="/resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
+                    <li><a href="/aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
+                    <li><a href="/contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
+                    <li><a href="/about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
+                </ul>
+            </nav>
+                    <div class="inner">
+                        <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><img src="{{ url_for('static', filename='alexicon.jpg') }}" width="48" height="48"></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
-
-<div class="container theme-showcase" role="main">
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Welcome to the Site!</h1>
-    </div>
-
-    {% block body %}{% endblock %}
-    
-</div> <!-- /container -->
-
-</body>
+    </body>
 </html>
 
