--- a/templates/cover.html
+++ b/templates/cover.html
@@ -15,7 +15,7 @@
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="{{ url_for('static', filename='css/cover.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -26,6 +26,8 @@
     <body>
         <div class="site-wrapper">
             <div class='cover-container'>
+                <h1>Welcome to my World</h1>
+                <hr>
                 <div class="mastfoot">
             <nav>
                 <ul class="nav nav-tabs nav-static">
