--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
-        <div class="main">
+<div class="main">
 
-            <h1>Who am I?</h1>
-            <hr>
+    <h1>About</h1>
+    <hr>
 
-            <p>My name is Alex and I like computers and travelling.</p>
-            <p><img class="img-responsive" src="{{ url_for('static', filename='alex1.jpg') }}" alt=""></p>
+    <p>My name is Alex and I like computers and travelling.</p>
+    <p align="center"><img class="img-responsive" src="{{ url_for('static', filename='alex1.jpg') }}" alt=""></p>
 
-        </div>
+</div>
 {% endblock %}
