--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,1 +1,12 @@
 {% extends "base.html" %}
+{% block body %}
+<div class="main">
+
+    <h1>Around the World</h1>
+    <hr>
+
+    <p>A mostly travel blog.</p>
+    <p align="center"><img class="img-responsive" src="{{ url_for('static', filename='IMG_2276.JPG') }}" alt=""></p>
+
+</div>
+{% endblock %}
