--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %}
+{% block body %}
+<div class="main">
+
+    <h1>Contact Me</h1>
+    <hr>
+
+    <p>Send me an email</p>
+
+</div>
+{% endblock %}
