--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %}
+{% block body %}
+<div class="main">
+
+    <h1>Resume</h1>
+    <hr>
+
+    <p align="center"><img class="img-responsive" src="{{ url_for('static', filename='alex.jpg') }}" alt=""></p>
+
+</div>
+{% endblock %}
