--- a/templates/cover.html
+++ b/templates/cover.html
@@ -1,49 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
-
-        <title>Alex Rushing - Website</title>
-
-        <!-- Bootstrap core CSS -->
-        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
-
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-                                                                                <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                                                                                    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                                                                                        <![endif]-->
-    </head>
-    <body>
-        <div class="site-wrapper">
-            <div class='cover-container'>
-                <h1>Welcome to my World</h1>
-                <hr>
-                <div class="mastfoot">
-            <nav>
-                <ul class="nav nav-tabs nav-static">
-                    <li><a href="/"><span class='glyphicon glyphicon-home'></span></a></li>
-                    <li><a href="/resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
-                    <li><a href="/aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
-                    <li><a href="/contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
-                    <li><a href="/about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
-                </ul>
-            </nav>
-                    <div class="inner">
-                        <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
-
+{% extends "base.html" %}
+{% block body %}
+<h1>Welcome to my World</h1>
+<hr>
+{% endblock %}
