Added some social medias

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,17 @@
                 </ul>
             </nav>
                     <div class="inner">
-                        <p>Published 2015 <a href="http://getbootstrap.com">Bootstrap</a><p>
+                        <p>Published 2015 -
+                            <a href="https://instagram.com/rush95/">
+                                <img src="{{ url_for('static', filename='Instagram.png') }}" height="20" width="20">
+                            </a>
+                            <a href="https://github.com/rushing3">
+                                <img src="{{ url_for('static', filename='Github.png') }}" height="20" width="20">
+                            </a>
+                            <a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button">
+                                <img src="{{ url_for('static', filename='LinkedIn.png') }}" height="20" width="20">
+                            </a>
+                        <p>
                     </div>
                 </div>
             </div>
