--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -43,6 +43,7 @@ body {
     max-width: 300px;
     max-height: 400px;
     float: center;
+    background-color: rgba(35,32,31,0.8)
 }
 
 /* -----------------------
@@ -198,6 +199,7 @@ body {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
         margin: 0 auto;
         overflow: hidden;
+        /*background-color: rgba(35,31,32,0.9);
     }
 }
 
