--- a/templates/aroundtheworld.html
+++ b/templates/aroundtheworld.html
@@ -3,7 +3,7 @@
 <div class='container'>
     <div class='well'>
         <div class='media'>
-            <a class='pull-left' href='#'>
+            <a class='pull-left' href='/aroundtheworld/1'>
                 <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
             </a>
             <div class='media-body'>
