--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -56,7 +56,6 @@ body {
     margin: 0 auto;
     background-color: transparent;
     position: relative;
-    margin-bottom: 130px;
     display: block;
 }
 
@@ -84,6 +83,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+    background-color: transparent;
     display: table;
     width: 100%;
     height: 100%; /* For at least Firefox */
@@ -92,10 +92,12 @@ body {
     box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
 }
 .site-wrapper-inner {
+    background-color: transparent;
     display: table-cell;
     vertical-align: top;
 }
 .cover-container {
+    background-color: transparent;
     margin-right: auto;
     margin-left: auto;
 }
@@ -186,6 +188,7 @@ body {
     }
     /* Start the vertical centering */
     .site-wrapper-inner {
+        background-color: transparent;
         vertical-align: middle;
     }
     /* Handle the widths */
@@ -194,6 +197,7 @@ body {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
         margin: 0 auto;
         overflow: hidden;
+        background-color: transparent;
     }
     .mastfoot {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
@@ -208,5 +212,6 @@ body {
     .mastfoot,
     .cover-container {
         width: 700px;
+        background-color: transparent;
     }
 }
