--- a/static/css/post_blog.css
+++ b/static/css/post_blog.css
@@ -27,6 +27,7 @@ a:hover {
 html,
 body {
     height: 100%;
+    background: url(Earth.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -42,6 +43,7 @@ body {
     max-width: 300px;
     max-height: 400px;
     float: center;
+    background-color: rgba(35,32,31,0.8)
 }
 
 /* -----------------------
@@ -81,6 +83,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+    background-color: transparent;
     display: table;
     width: 100%;
     height: 100%; /* For at least Firefox */
@@ -89,10 +92,12 @@ body {
     box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
 }
 .site-wrapper-inner {
+    background-color: transparent;
     display: table-cell;
     vertical-align: top;
 }
 .cover-container {
+    background-color: transparent;
     margin-right: auto;
     margin-left: auto;
 }
@@ -184,6 +189,7 @@ body {
     }
     /* Start the vertical centering */
     .site-wrapper-inner {
+        background-color: transparent;
         vertical-align: middle;
     }
     /* Handle the widths */
@@ -192,13 +198,13 @@ body {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
         margin: 0 auto;
         overflow: hidden;
-        position: relative;
+        background-color: transparent;
     }
     .mastfoot {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
         margin: 0 auto;
         overflow: hidden;
-        position: fixed;
+        /*background-color: rgba(35,31,32,0.9);
     }
 }
 
@@ -207,5 +213,6 @@ body {
     .mastfoot,
     .cover-container {
         width: 700px;
+        background-color: transparent;
     }
 }
