--- a/templates/post_base.html
+++ b/templates/post_base.html
@@ -15,7 +15,7 @@
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="{{ url_for('static', filename='css/blog.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/post_blog.css') }}" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
