--- a/templates/aroundtheworld.html
+++ b/templates/aroundtheworld.html
@@ -4,39 +4,17 @@
     <div class='well'>
         <div class='media'>
             <a class='pull-left' href='/aroundtheworld/1'>
-                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
+                <img src="{{ url_for('static', filename='sentosa_selfie.jpg') }}" height='96' width='96'>
             </a>
             <div class='media-body'>
-                <h4 class='media-heading'>First Post Trial Run</h4>
-                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
-            </div>
-        </div>
-    </div>
-    <div class='well'>
-        <div class='media'>
-            <a class='pull-left' href='#'>
-                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-            </a>
-            <div class='media-body'>
-                <h4 class='media-heading'>First Post Trial Run</h4>
-                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
-            </div>
-        </div>
-    </div>
-    <div class='well'>
-        <div class='media'>
-            <a class='pull-left' href='#'>
-                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-            </a>
-            <div class='media-body'>
-                <h4 class='media-heading'>First Post Trial Run</h4>
-                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+                <h4 class='media-heading'>My First Week in Singapore</h4>
+                <p>As my first week in the city-state of Singapore comes to a close I have some new interesting stories and experiences to share with the world.</p>
             </div>
         </div>
     </div>
     <ul class="pager">
         <li class="previous disabled"><a href="/aroundtheworld"><span aria-hidden="true">&larr;</span> Older</a></li>
-        <li class="next"><a href="/aroundtheworld1">Newer <span aria-hidden="true">&rarr;</span></a></li>
+        <li class="next disabled"><a href="/aroundtheworld1">Newer <span aria-hidden="true">&rarr;</span></a></li>
     </ul>
 </div>
 {% endblock %}
