--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,6 @@
                             <li><a href="/"><span class='glyphicon glyphicon-home'></span></a></li>
                             <li><a href="/resume"><span class='glyphicon glyphicon-folder-open'></span></a></li>
                             <li><a href="/aroundtheworld"><span class='glyphicon glyphicon-globe'></span></a></li>
-                            <li><a href="/contact"><span class='glyphicon glyphicon-earphone'></span></a></li>
                             <li><a href="/about"><span class='glyphicon glyphicon-info-sign'></span></a></li>
                         </ul>
                     </nav>
@@ -43,7 +42,8 @@
                         <hr>
                     </div>
                     <div class="inner">
-                        <p>Published 2015 -
+                        <p>
+                            arushing95@gmail.com|
                             <a href="https://instagram.com/rush95/">
                                 <img src="{{ url_for('static', filename='Instagram.png') }}" height="20" width="20">
                             </a>
