--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <h1>Contact Me</h1>
     <hr>
 
-    <p>Send me an email</p>
+    <li><span class='glyphicon glyphicon-envelope'> - arushing95@gmail.com</span></li>
 
 </div>
 {% endblock %}
