--- a/templates/resume.html
+++ b/templates/resume.html
@@ -5,7 +5,7 @@
     <h1>Resume</h1>
     <hr>
 
-    <p align="center"><img class="img-responsive" src="{{ url_for('static', filename='alex.jpg') }}" alt=""></p>
+    <p>Coming Soon...</p>
 
 </div>
 {% endblock %}
