--- a/templates/post1.html
+++ b/templates/post1.html
@@ -1,10 +1,13 @@
 {% extends "post_base.html" %}
 {% block body %}
 <div class='container'>
+    <h1>My First Week in Singapore</h1>
+    <hr>
     <div class='media'>
         <div class='jumbotron'>
-            <img src="{{ url_for('static', filename='alex1.jpg') }}" width='500'>
-            <p style='text-indent:2em'> From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country. Spend the day with a traditional tribe or in a tea plantation in the Cameron Highlands or trek through the huge national parks of Gunung Mulu and Taman Negara, all the while coming across various wildlife including tigers and Orangutans. Make sure to head to Borneo and explore the jungle and dive at Spidan, one of the best dive locations in the world. Plus, there is a great Indian food and curries throughout the country. Malaysia is a unique travel experience that is much different from its neighbors.</p>
+            <img src="{{ url_for('static', filename='sentosa_selfie.jpg') }}" width='500'>
+            <hr>
+            <p style='text-indent:2em'> As my first week in the city-state of Singapore comes to a close I have some new interesting stories and experiences to share with the world.</p>
         </div>
     </div>
     <ul class="pager">
