--- a/templates/post1.html
+++ b/templates/post1.html
@@ -9,6 +9,12 @@
             <hr>
             <p style='text-indent:2em'> As my first week in the city-state of Singapore comes to a close I have some new interesting stories and experiences to share with the world.</p>
         </div>
+        <div class="img">
+            <a target="blank" href="/big_monkey">
+                <img src="{{ url_for('static', filename='monkey.JPG') }}" height='200'>
+            </a>
+            <div class="desc">Hanging out with some monkeys in MacRitchie Reservoir</div>
+        </div>
     </div>
     <ul class="pager">
         <li class="previous"><a href="/aroundtheworld"><span aria-hidden="true">&larr;</span> Back</a></li>
